# xdg-user-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.tpl
examples/: example.rs  functions.rs  userdirs.rs
src/: lib.rs  parser.rs  utils.rs
