[package]
name = "xdg-user"
version = "0.1.0"
authors = ["rijenkii <5338332+rijenkii@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

description = "A library for accessing common user file directories according to `xdg-user-dirs`"
homepage = "https://github.com/rijenkii/xdg-user-rs"
documentation = "https://docs.rs/xdg-user"
repository = "https://github.com/rijenkii/xdg-user-rs"
readme = "README.md"

keywords = ["xdg", "userdir", "folder", "path", "directory"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
lazy_static = "1.4"

[dependencies.regex]
version = "1.3"
default-features = false
features = ["std"]